<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">


            <Button
                android:id="@+id/facebook_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/bg_facebook"
                android:drawableLeft="@drawable/ic_facebook"
                android:fontFamily="sans-serif"
                android:text="@string/Connectwithfb"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10dp" />

            <Button
                android:id="@+id/google_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_5"
                android:layout_weight="1"
                android:background="@drawable/bg_google"
                android:drawableLeft="@drawable/ic_google3"
                android:drawablePadding="-15dp"
                android:fontFamily="sans-serif"
                android:text="@string/connectwithgoogle"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="sans-serif_medium"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_30"
            android:orientation="horizontal"
            android:focusableInTouchMode="true"
            android:descendantFocusability="beforeDescendants">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_userName_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColorHint="#333333">

                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:background="@null"
                    android:textColor="@color/black"
                    android:textColorHint="#d1d1d1"
                    android:textSize="@dimen/dp_14"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:descendantFocusability="beforeDescendants"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/gray_lite"
            android:visibility="visible"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"

            ></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">



            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_psd_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColorHint="#333333">

                <EditText
                    android:id="@+id/login_psd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="#d1d1d1"
                    android:textSize="@dimen/dp_14" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/gray_lite"
            android:visibility="visible"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            ></View>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/bg_editprimary"
            android:fontFamily="sans-serif"
            android:text="@string/signin"
            android:textSize="@dimen/dp_16"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/registration_forgotpsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/forgot"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_16" />

        <LinearLayout
            android:id="@+id/registration_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <TextView


                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/tv_newuser_signup"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_16" />

            <TextView

                android:id="@+id/registration_register1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dp_16"
                android:textStyle="bold" />

        </LinearLayout>


</LinearLayout>