<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:ignore="NamespaceTypo"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="vertical"
                android:background="@color/colorPrimary"
                >

                <TextView
                    android:id="@+id/tv_login_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_centerHorizontal="true"
                    android:text="@string/login_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp_20"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_login_title"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/login_text"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/login_radius"
                android:layout_marginTop="115dp"
                android:elevation="@dimen/dp_25"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="LOGIN"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dp_16"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Sign Up"
                    android:background="@drawable/login_radius_fill"
                    android:textStyle="bold"
                    android:textSize="@dimen/dp_16"
                    android:textColor="@color/white"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp_180">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/registration_fname_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textColorHint="#333333"
                        android:layout_marginLeft="@dimen/dp_10">

                        <EditText
                            android:id="@+id/registration_fname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_5"
                            android:layout_marginTop="@dimen/dp_10"
                            android:fontFamily="sans-serif"
                            android:gravity="center_vertical"
                            android:hint="@string/fname"
                            android:inputType="textCapSentences"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textColorHint="#d1d1d1"
                            android:textSize="@dimen/dp_14"
                            />
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/registration_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textColorHint="#333333">

                        <EditText
                            android:id="@+id/registration_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_10"
                            android:layout_marginTop="@dimen/dp_10"
                            android:fontFamily="sans-serif"
                            android:gravity="center_vertical"
                            android:hint="@string/lname"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textColorHint="#d1d1d1"
                            android:textSize="@dimen/dp_14" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/dp_10">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:fontFamily="sans-serif"
                        android:text="@string/gender"
                        android:textColor="@color/black" />

                    <RadioGroup
                        android:id="@+id/radio_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_15"
                            android:fontFamily="sans-serif"
                            android:text="@string/radio_male" />

                        <RadioButton
                            android:id="@+id/radio_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_15"
                            android:fontFamily="sans-serif"
                            android:text="@string/radio_female" />
                    </RadioGroup>
                </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/gray_lite"
                            android:layout_marginRight="@dimen/dp_10"
                            android:layout_marginLeft="@dimen/dp_10"></View>
                    </LinearLayout>
                    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/registration_dob_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#333333"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_5">

                        <EditText
                            android:id="@+id/registration_dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_10"
                            android:layout_marginRight="@dimen/dp_5"
                            android:fontFamily="sans-serif"
                            android:gravity="center_vertical"
                            android:hint="@string/dob"
                            android:inputType="textCapSentences"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textColorHint="#d1d1d1"
                            android:textSize="@dimen/dp_14"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/mobileno_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#333333"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_10">
                        <EditText
                            android:id="@+id/mobile_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="MoblieNo"
                            android:textSize="@dimen/dp_14" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/email_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#333333"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_10">
                        <EditText
                            android:id="@+id/email_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Email ID"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/dp_14" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_10">
                    <ImageView
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:src="@drawable/ic_address"
                        android:layout_marginTop="@dimen/dp_10"
                        />
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/address_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#333333"
                        android:background="@null"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_marginLeft="5dp"
                       >
                        <EditText
                            android:id="@+id/address_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Address"
                            android:background="@null"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/dp_14" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="10dp"
                   android:layout_marginRight="@dimen/dp_10"
                    android:background="@color/gray_lite">

                </View>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/password_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#333333"
                        android:background="@null"

                        >
                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Address"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:textSize="@dimen/dp_14" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="@dimen/dp_45"
                    android:layout_marginTop="@dimen/dp_30"
                    android:background="@drawable/bg_editprimary"
                    android:fontFamily="sans-serif"
                    android:text="@string/signup"
                    android:textSize="@dimen/dp_16"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>
